Add favicon to fix 404

--- a/nif_calculator/templates/base.html
+++ b/nif_calculator/templates/base.html
@@ -12,6 +12,8 @@
     <!-- Datatables CSS -->
     <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.5/b-3.1.2/b-html5-3.1.2/datatables.min.css" rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
         /* Additional styling for better layout and responsiveness */
         .container-xl,
